--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
+APP_ENV=local
+APP_DEBUG=true
 APP_KEY=LyGYbhylLzo3qz3WIOe2ocY1rhKL97PC
+
+DB_HOST=localhost
+DB_DATABASE=homestead
+DB_USERNAME=homestead
+DB_PASSWORD=secret
+
+CACHE_DRIVER=file
+SESSION_DRIVER=file
